# libpst-win64

./: .gitignore  CMakeLists.txt  NEWS  README  README.md  README.win64.md  SECURITY.md  configure.ac  pyproject.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  RELEASE_TAG  dependabot.yml
.github/workflows/: build-linux.yml  build-windows.yml  cflite_batch.yml  codeql.yml  scorecard.yml  security.yml  wheels.yml
cmake/: config.h.in
fuzz/: README.md  fuzz_lzfu.c  fuzz_pst_open.c  fuzz_pst_walk.c  pst.dict
fuzz/corpus/: lzfu_seed  seed_10b6d697  seed_23616a0a  seed_463b09ae  seed_4bb37f73  seed_59f4d420  seed_5cb0d1c2  seed_6dc51c95  seed_7fbccc82  seed_80f5bd36  seed_812ec519  seed_a413159d  seed_a53fb504  seed_ac0789a3  seed_c9249402  seed_dd086bed  seed_ed0420eb  seed_f158bf99
libpst_py/: __init__.py  _core.pyi
oss-fuzz/: README.md
oss-fuzz/projects/libpst/: Dockerfile  project.yaml
python/: pybind_libpst.cpp
regression/fuzz-corpus/: null-data-list-copy-entryid  oob-wide-to-single-and-mapi-list  oob-xattrib-header-length  pst_build_id2_header_oob  pst_build_id_ptr_deep_recursion  pst_build_id_ptr_lookahead_oob  pst_build_id_ptr_oob  pst_getID_null_bsearch  pst_parse_block_header_oob  pst_process_null_mapi_element  segv-type3-uninitialized-subblock-free
src/: Makefile.am  define.h  libpst.c  libpst.h  lzfu.c  nick2ldif.cpp  pst2dii.cpp.in  pst2ldif.cpp  readpst.c  timeconv.c  vbuf.c
tests/: test_le_macros.c  test_smoke.py
tests/fixtures/: README.md
upstream-patches/: 0001-tranche-c-memory-safety.patch  README.md
